<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baby App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Splash Screen</string>
    <string name="welcome">Welcome</string>
    <string name="next">Get started</string>
    <string name="title_activity_age">Age</string>
    <string name="howOld">How old</string>
    <string name="isYourBaby">is your child?</string>
    <string name="back">Back</string>
    <string name="forward">Next</string>
    <string name="title_activity_teeth">Teeth</string>
    <string name="howMany">How many</string>
    <string name="teethDoes">teeth does your</string>
    <string name="yourBabyHave">child have?</string>
    <string name="none">None</string>
    <string name="oneToFive">1 &#45; 5</string>
    <string name="sixToTen">6 &#45; 10</string>
    <string name="moreThan10">&#62; 10</string>
    <string name="hasYourBaby">Has your child</string>
    <string name="everVisted">ever visited</string>
    <string name="aDentist">a dentist?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="whenWasYour">When was your</string>
    <string name="lastVisit">child\'s last visit</string>
    <string name="withADentist">with a dentist?</string>
    <string name="sixMonths">Under 6 months ago</string>
    <string name="oneYear">Under 1 year ago</string>
    <string name="twoYears">Under 2 years ago</string>
    <string name="overTwoYears">Over 2 years ago</string>
    <string name="cavities">Cavities</string>
    <string name="traumaToTeeth">Experienced trauma to the teeth</string>
    <string name="ababyGrowth">Irregular adult teeth growth</string>
    <string name="ibabyGrowth">Irregular baby teeth growth</string>
    <string name="gumPain">Gum pain</string>
    <string name="teethDiscolourization">Teeth discolourization</string>
    <string name="unalignedBite">Unaligned bite</string>
    <string name="doesYourBaby">Does your baby</string>
    <string name="exhibitTheFollowing">exhibit the following?</string>
    <string name="checkAll">(Check all that apply)</string>
    <string name="timeline">Timeline</string>
    <string name="zeroSix">Newborn to 6 months</string>
    <string name="sixTwelve">6 to 12 months</string>
    <string name="oneTwo">1 to 2 years</string>
    <string name="twoFour">2 to 4 years</string>
    <string name="fourSix">4 to 6 years</string>
    <string name="sixTen">6 to 10 years</string>
    <string name="teethingBegins">5 months: Teething begins around this time.</string>
    <string name="firstTeeth">8 months: First teeth begin to erupt.</string>
    <string name="upperIncisors">10 months: Upper central incisors emerge.</string>
    <string name="lowerIncisors">11 months: Lower lateral incisors emerge.</string>
    <string name="upperLaterals">12 months: Upper lateral incisors emerge.</string>
    <string name="noTeeth">1 year: If the baby still has no teeth by the first birthday, contact your dentist.</string>
    <string name="visitDentist">1 year: Baby should have visited dentist by this time.</string>
    <string name="molars">15 months: Upper and lower molars begin to emerge</string>
    <string name="canines">18 months: Upper and lower canines begin to emerge.</string>
    <string name="secondMolars">Upper and lower second molars emerge.</string>
    <string name="allTeeth">3 years: Baby should have full set of teeth.</string>
    <string name="dentistWarning">Warning: Please visit your dentist as soon as possible.</string>

    <string-array name="babyAge">
        <item>I\'m expecting</item>
        <item>&#60; 6 months</item>
        <item>6 &#45; 12 months</item>
        <item>1 &#45; 2 years</item>
        <item>3 &#45; 4 years</item>
        <item>5 &#45; 6 years</item>
        <item>7 &#45; 10 years</item>
        <item>Over 10 years</item>
    </string-array>

    <string name="title_activity_dentist">Visted a dentist?</string>
    <string name="title_activity_last_visit">When was your last visit?</string>
    <string name="title_activity_traits">Experienced any of the following?</string>
    <string name="title_activity_display">Information for your child</string>

</resources>
